Fix CSS on scrollbar and buttons

--- a/project/src/components/ActionButton/ActionButton.module.css
+++ b/project/src/components/ActionButton/ActionButton.module.css
@@ -26,6 +26,7 @@
   margin: 0;
   background-color: transparent;
   border: none;
+  cursor: pointer;
 }
 
 .button:active {
